--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.simplify4u</groupId>
         <artifactId>parent</artifactId>
-        <version>2.4.4</version>
+        <version>2.6.1</version>
         <relativePath />
     </parent>
 
@@ -27,6 +27,20 @@
     <artifactId>test</artifactId>
 
     <version>1.0.0-SNAPSHOT</version>
+
+    <scm>
+        <connection>scm:git:git@github.com:s4u/testing.git</connection>
+        <developerConnection>${project.scm.connection}</developerConnection>
+        <url>https://github.com/s4u/testing</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <distributionManagement>
+        <site>
+            <id>github-pages</id>
+            <url>${project.scm.connection}</url>
+        </site>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
