--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,12 +8,6 @@ on:
 jobs:
   build:
 
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        java: [8, 11, 13]
-      fail-fast: false
-
     runs-on: ubuntu-latest
 
     steps:
@@ -22,6 +16,12 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 8
+
+      - uses: actions/cache@v1
+        with:
+          path: ~/.m2/repository
+          key:          site-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: site-maven-
 
       - uses: s4u/maven-settings-action@v2
 
