--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <distributionManagement>
         <site>
             <id>github-pages</id>
-            <url>${project.scm.connection}</url>
+            <url>${project.scm.url}</url>
         </site>
     </distributionManagement>
 
