git config for gh

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,9 +26,7 @@ jobs:
       - uses: s4u/maven-settings-action@v2
 
       - run: |
-          git config --global user.email "github-bot@github.com"
+          git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Action"
-          echo "+++ git config local +++"
-          git config --local --list
 
-      - run: mvn -ntp site-deploy
+      - run: mvn -ntp site-deploy -Dusername=git -Dpassword=${{ secrets.GITHUB_TOKEN }}
