--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -44,10 +44,10 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Action"
 
-      - name: Deploy maaven site
+      - name: Deploy Maven Site
         run: mvn site-deploy -Dscmpublish.dryRun=false
         if: github.repository_owner == 's4u' && startsWith( github.ref, 'refs/tags/') && github.event_name == 'push'
 
-      - name: Test maven site
-      - run: mvn site
+      - name: Test Maven Site
+        run: mvn site
         if: startsWith( github.ref, 'refs/heads/')
