--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   site-test:
     name: Maven site - Test
-    if: github.repository_owner != 's4u' || startsWith( github.ref, 'refs/heads/')
+    if: github.repository_owner != 's4u' || startsWith( github.ref, 'refs/heads/') || github.event_name != 'push'
 
     runs-on: ubuntu-latest
 
