--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -2,44 +2,13 @@ name: GitHub Pages
 
 on:
   push:
-    branches-ignore:
-      - 'dependabot/**'
     tags:
       - 'v*'
 
-  pull_request:
-    branches:
-      - 'master'
-
 jobs:
-  site-test:
-    name: Maven site - Test
-    if: github.repository_owner != 's4u' || startsWith( github.ref, 'refs/heads/') || github.event_name != 'push'
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 8
-
-      - uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key:          maven-site-test-${{ hashFiles('**/pom.xml') }}
-          restore-keys: maven-site-test-
-
-      - uses: s4u/maven-settings-action@v2
-        with:
-          sonatypeSnapshots: true
-
-      - run: mvn site
-
   site-deploy:
-    name: Maven site - Deploy
-    if: github.repository_owner == 's4u' && startsWith( github.ref, 'refs/tags/') && github.event_name == 'push'
+    name: Maven Site - Deploy
+    if: github.repository_owner == 's4u'
 
     runs-on: ubuntu-latest
 
