--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,6 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
         with:
+          persist-credentials: false
           ref: 'refs/pull/${{ github.event.number }}/merge'
 
       - uses: actions/cache@v2.1.3
@@ -53,6 +54,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
         with:
           ref: 'refs/pull/${{ github.event.number }}/merge'
+          persist-credentials: false
           fetch-depth: 0
 
       - uses: actions/cache@v2.1.3
