--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,13 @@
     <parent>
         <groupId>org.simplify4u</groupId>
         <artifactId>parent</artifactId>
-        <version>2.6.2-SNAPSHOT</version>
+        <version>2.7.1</version>
         <relativePath />
     </parent>
 
-    <groupId>test.example.com</groupId>
+    <groupId>org.simplify4u.test</groupId>
     <artifactId>test</artifactId>
+    <packaging>pom</packaging>
 
     <version>1.0.0-SNAPSHOT</version>
     <url>https://www.simplify4u.org/${github.repo}</url>
@@ -45,25 +46,25 @@
 
     <properties>
         <github.repo>testing</github.repo>
+        <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
+        <gpg.skip>true</gpg.skip>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.github.s4u</groupId>
-            <artifactId>jfatek</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>3.4.4</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.simplify4u.plugins</groupId>
+                <artifactId>sign-maven-plugin</artifactId>
+                <version>0.1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
