--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,9 @@ jobs:
 
       - uses: actions/cache@v2.1.3
         with:
-          path: ~/.m2/repository
+          path: |
+            ~/.m2/repository
+            ~/.sonar/cache
           key: ${{ matrix.os }}-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ matrix.os }}-jdk${{ matrix.java }}-
 
@@ -42,51 +44,21 @@ jobs:
 
       - run: mvn verify
 
-  sonar:
-    name: Build Sonar ubuntu-latest jdk11
-    if: startsWith( github.event.head_commit.message , '[maven-release-plugin] prepare release') != true
-
-    needs: verify
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2.3.4
-        with:
-          fetch-depth: 0
-
-      - uses: actions/cache@v2.1.3
-        with:
-          path: |
-            ~/.m2/repository
-            ~/.sonar/cache
-          key: ubuntu-latest-jdk11-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ubuntu-latest-jdk11-
-
-      - uses: actions/setup-java@v1.4.3
-        with:
-          java-version: 11
-
-      - uses: s4u/maven-settings-action@v2.2.0
-        with:
-          sonatypeSnapshots: true
-          properties: '[{"sonar.login": "${env.SONAR_TOKEN}"}]'
-
-      - run: mvn verify
-
-      - run: mvn sonar:sonar -Dsonar.branch.name=${GITHUB_REF#refs/heads/}
-        if: github.repository_owner == 's4u'
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - run: mvn sonar:sonar -Dsonar.branch.name=${GITHUB_REF#refs/heads/} -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        if: >
+          matrix.os == 'ubuntu-latest'
+          && matrix.java == '11'
+          && github.repository_owner == 's4u'
+          && startsWith( github.ref, 'refs/heads/')
 
   deploy:
     name: Build Deploy ubuntu-latest jdk8
     if: >
-      startsWith( github.event.head_commit.message , '[maven-release-plugin] prepare release') != true
-      && github.repository_owner == 's4u'
+      github.repository_owner == 's4u'
+      && !startsWith( github.event.head_commit.message , '[maven-release-plugin] prepare release')
       && github.ref == 'refs/heads/master'
 
-    needs: sonar
+    needs: verify
 
     runs-on: ubuntu-latest
 
