--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
       - 'dependabot/**'
     tags:
 
+  schedule:
+    - cron: '55 5 * * 5'
+
 jobs:
 
   verify:
@@ -18,7 +21,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
-        java: [ 8, 11, 13 ]
+        java: [ 8, 11, 15 ]
         exclude:
           - os: ubuntu-latest
             java: 11
@@ -38,7 +41,7 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
 
-      - uses: s4u/maven-settings-action@v2.2.0
+      - uses: s4u/maven-settings-action@v2.3.0
         with:
           sonatypeSnapshots: true
 
@@ -75,7 +78,7 @@ jobs:
         with:
           java-version: 8
 
-      - uses: s4u/maven-settings-action@v2.2.0
+      - uses: s4u/maven-settings-action@v2.3.0
         with:
           sonatypeSnapshots: true
           servers: '[{"id": "ossrh", "username": "${env.OSS_USER}", "password": "${env.OSS_PASS}"}]'
@@ -84,3 +87,4 @@ jobs:
         env:
           OSS_USER: ${{ secrets.OSS_USER }}
           OSS_PASS: ${{ secrets.OSS_PASS }}
+          SIGN_KEY: ${{ secrets.SIGN_KEY }}
