--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,15 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.simplify4u</groupId>
         <artifactId>parent</artifactId>
         <version>2.7.1</version>
-        <relativePath />
+        <relativePath/>
     </parent>
 
     <groupId>org.simplify4u.test</groupId>
@@ -48,6 +49,7 @@
         <github.repo>testing</github.repo>
         <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
         <gpg.skip>true</gpg.skip>
+        <project.build.outputTimestamp>2020-12-25T10:00:00Z</project.build.outputTimestamp>
     </properties>
 
     <build>
