--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,30 @@ jobs:
           && github.repository_owner == 's4u'
           && startsWith( github.ref, 'refs/heads/')
 
+  site-test:
+    name: Maven Site - Test
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2.3.4
+
+      - uses: actions/cache@2.1.3
+        with:
+          path: ~/.m2/repository
+          key: maven-site-test-${{ hashFiles('**/pom.xml') }}
+          restore-keys: maven-site-test-
+
+      - uses: actions/setup-java@v1.4.3
+        with:
+          java-version: 8
+
+      - uses: s4u/maven-settings-action@v2.2.0
+        with:
+          sonatypeSnapshots: true
+
+      - run: mvn --no-transfer-progress site
+
   deploy:
     name: Build Deploy ubuntu-latest jdk8
     if: >
@@ -63,7 +87,7 @@ jobs:
         || ( github.ref == 'refs/heads/master' && !startsWith(github.event.head_commit.message , '[maven-release-plugin] prepare release') )
       )
 
-    needs: verify
+    needs: [ verify, site-test ]
 
     runs-on: ubuntu-latest
 
@@ -102,10 +126,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - uses: actions/cache@v1
+      - uses: actions/cache@v2.1.3
         with:
           path: ~/.m2/repository
-          key:          maven-site-deploy-${{ hashFiles('**/pom.xml') }}
+          key: maven-site-deploy-${{ hashFiles('**/pom.xml') }}
           restore-keys: maven-site-deploy-
 
       - uses: actions/setup-java@v1.4.3
