--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - uses: actions/cache@2.1.3
+      - uses: actions/cache@v2.1.3
         with:
           path: ~/.m2/repository
           key: maven-site-test-${{ hashFiles('**/pom.xml') }}
