--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: 0
 
       - uses: actions/cache@v2.1.3
         with:
@@ -56,6 +58,9 @@ jobs:
 
   site-test:
     name: Maven Site - Test
+    if: |
+      startsWith(github.ref, 'refs/tags/')
+      || !startsWith(github.event.head_commit.message , '[maven-release-plugin] prepare release')
 
     runs-on: ubuntu-latest
 
