--- a/pom.xml
+++ b/pom.xml
@@ -27,14 +27,14 @@
     <artifactId>test</artifactId>
     <packaging>pom</packaging>
 
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <url>https://www.simplify4u.org/${github.repo}</url>
 
     <scm>
         <connection>scm:git:git@github.com:s4u/testing</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/s4u/testing</url>
-        <tag>v1.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
@@ -46,7 +46,7 @@
 
     <properties>
         <github.repo>testing</github.repo>
-        <project.build.outputTimestamp>2020-12-27T09:57:02Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2020-12-27T09:57:14Z</project.build.outputTimestamp>
     </properties>
 
 
