--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -4,13 +4,36 @@ on:
   push:
     # branches to consider in the event; optional, defaults to all
     branches:
-      - master
+      - 'master'
+    tags:
+      - 'v*'
+
+#      - name: chek for master build
+#        id: master-build
+#        run: echo "::set-output name=master::true"
+#        if: >
+#          matrix.os == 'ubuntu-latest' &&
+#          matrix.java == '8' &&
+#          github.event_name == 'push' &&
+#          startsWith(github.repository, 's4u/')
+#
+#      - name: master build
+#        run: echo "Master"
+#        if: steps.master-build.outputs.master == 'true'
 
 jobs:
   update_release_draft:
     name: Update Release Draft
     runs-on: ubuntu-latest
     steps:
-      - uses: release-drafter/release-drafter@v5.12.1
+      - id: is-tag
+        run: |
+          echo "::set-output name=tag-name::${GITHUB_REF#refs/tags/}"
+          echo "::set-output name=is-tag::true"
+        if: github.repository_owner == 's4u' && startsWith(github.ref, 'refs/tags/')
+
+      - uses: release-drafter/release-drafter@v5.13.0
+        with:
+          publish: ${{ steps.is-tag.outputs.is-tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
