--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -32,3 +32,13 @@ template: |
 
   # Thanks
   Many thanks for collaboration on this release for: $CONTRIBUTORS
+
+replacers:
+  - search: '/(?:and )?@dependabot-preview(?:\[bot\])?,?/g'
+    replace: ''
+
+  - search: '/(?:and )?@dependabot(?:\[bot\])?,?/g'
+    replace: ''
+
+  - search: '/(?:and )?Github Action(?:\[bot\])?,?/g'
+    replace: ''
