--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -19,12 +19,14 @@ jobs:
     steps:
       - id: is-tag
         run: |
-          echo "::set-output name=tag-name::${GITHUB_REF#refs/tags/}"
-          echo "::set-output name=is-tag::true"
+          echo "::set-output name=name::${GITHUB_REF#refs/tags/}"
+          echo "::set-output name=tag::true"
         if: github.repository_owner == 's4u' && startsWith(github.ref, 'refs/tags/')
 
       - uses: release-drafter/release-drafter@v5.13.0
         with:
-          publish: ${{ steps.is-tag.outputs.is-tag }}
+          publish: ${{ steps.is-tag.outputs.tag }}
+          name: ${{ steps.is-tag.outputs.name }}
+          tag: ${{ steps.is-tag.outputs.name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
