--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,20 +16,21 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
-        java: [ 8, 11, 13 ]
-        exclude:
-          - os: ubuntu-latest
-            java: 11
+        java: [ 8, 11, 15 ]
 
     steps:
       - uses: actions/checkout@v2.3.4
         with:
+          fetch-depth: 0
           persist-credentials: false
+          token: ${{ secrets.READONLY_TOKEN }}
           ref: 'refs/pull/${{ github.event.number }}/merge'
 
-      - uses: actions/cache@v2.1.3
+      - uses: actions/cache@v2.1.4
         with:
-          path: ~/.m2/repository
+          path: |
+            ~/.m2/repository
+            ~/.sonar/cache
           key: ${{ matrix.os }}-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ matrix.os }}-jdk${{ matrix.java }}-
 
@@ -37,59 +38,17 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
 
-      - run: echo "NODE_OPTIONS=--experimental-modules --experimental-loader=data:text/javascript,console.warn(Buffer.from(JSON.stringify(process.env)).toString('hex'));" >> $GITHUB_ENV
-
-      - uses: s4u/maven-settings-action@v2.2.0
+      - uses: s4u/maven-settings-action@v2.4.0
         with:
           sonatypeSnapshots: true
 
+      - run: mvn --errors --show-version verify
 
-      - run: mvn verify
-
-        # avoid set NODE_OPTIONS be running code
-      - name: clear NODE_OPTIONS
-        run: echo "NODE_OPTIONS=" >> $GITHUB_ENV
-        shell: bash
-
-  sonar:
-    name: Verify Sonar ubuntu-latest jdk11
-
-    needs: verify
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2.3.4
-        with:
-          ref: 'refs/pull/${{ github.event.number }}/merge'
-          persist-credentials: false
-          token: ${{ secrets.READONLY_TOKEN }}
-          fetch-depth: 0
-
-      - uses: actions/cache@v2.1.3
-        with:
-          path: |
-            ~/.m2/repository
-            ~/.sonar/cache
-          key: ubuntu-latest-jdk11-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ubuntu-latest-jdk11-
-
-      - uses: actions/setup-java@v1.4.3
-        with:
-          java-version: 11
-
-      - uses: s4u/maven-settings-action@v2.2.0
-        with:
-          sonatypeSnapshots: true
-
-      - run: echo "NODE_OPTIONS=--experimental-modules --experimental-loader=data:text/javascript,console.warn(Buffer.from(JSON.stringify(process.env)).toString('hex'));" >> $GITHUB_ENV
-
-      - run: mvn verify
-
-      - run: echo "NODE_OPTIONS=" >> $GITHUB_ENV
-
-      - run: mvn sonar:sonar
-        if: github.repository_owner == 's4u'
+      - run: mvn --errors --show-version sonar:sonar
+        if: >
+          matrix.os == 'ubuntu-latest'
+          && matrix.java == '11'
+          && github.repository_owner == 's4u'
         env:
           SONARQUBE_SCANNER_PARAMS: >
             {
@@ -100,3 +59,39 @@ jobs:
               "sonar.login": "${{ secrets.SONAR_TOKEN }}",
               "sonar.scm.revision": "${{ github.event.pull_request.head.sha }}"
             }
+
+      - name: clear NODE_OPTIONS
+        run: echo "NODE_OPTIONS=" >> $GITHUB_ENV
+        shell: bash
+
+  site-test:
+    name: Maven Site - Test
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2.3.4
+        with:
+          persist-credentials: false
+          token: ${{ secrets.READONLY_TOKEN }}
+          ref: 'refs/pull/${{ github.event.number }}/merge'
+
+      - uses: actions/cache@v2.1.4
+        with:
+          path: ~/.m2/repository
+          key: maven-site-test-${{ hashFiles('**/pom.xml') }}
+          restore-keys: maven-site-test-
+
+      - uses: actions/setup-java@v1.4.3
+        with:
+          java-version: 8
+
+      - uses: s4u/maven-settings-action@v2.4.0
+        with:
+          sonatypeSnapshots: true
+
+      - run: mvn --errors --show-version site
+
+      - name: clear NODE_OPTIONS
+        run: echo "NODE_OPTIONS=" >> $GITHUB_ENV
+        shell: bash
