--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,9 +39,10 @@ jobs:
           key: ${{ matrix.os }}-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ matrix.os }}-jdk${{ matrix.java }}-
 
-      - uses: actions/setup-java@v1.4.3
+      - uses: actions/setup-java@v2.0.0
         with:
           java-version: ${{ matrix.java }}
+          distribution: 'adopt'
 
       - uses: s4u/maven-settings-action@v2.3.0
         with:
@@ -49,12 +50,15 @@ jobs:
 
       - run: mvn verify
 
-      - run: mvn sonar:sonar -Dsonar.branch.name=${GITHUB_REF#refs/heads/} -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      - run: mvn sonar:sonar
         if: >
           matrix.os == 'ubuntu-latest'
           && matrix.java == '11'
           && github.repository_owner == 's4u'
           && startsWith( github.ref, 'refs/heads/')
+        env:
+          SONARQUBE_SCANNER_PARAMS: '{"sonar.login": "2de0e32b2b3108965f76a4713ba2028978c233ed"}'
+
 
   site-test:
     name: Maven Site - Test
@@ -73,9 +77,10 @@ jobs:
           key: maven-site-test-${{ hashFiles('**/pom.xml') }}
           restore-keys: maven-site-test-
 
-      - uses: actions/setup-java@v1.4.3
+      - uses: actions/setup-java@v2.0.0
         with:
           java-version: 8
+          distribution: 'adopt'
 
       - uses: s4u/maven-settings-action@v2.2.0
         with:
@@ -105,9 +110,10 @@ jobs:
           key: deploy-ubuntu-latest-jdk8-${{ hashFiles('**/pom.xml') }}
           restore-keys: deploy-ubuntu-latest-jdk8-
 
-      - uses: actions/setup-java@v1.4.3
+      - uses: actions/setup-java@v2.0.0
         with:
           java-version: 8
+          distribution: 'adopt'
 
       - uses: s4u/maven-settings-action@v2.3.0
         with:
@@ -137,9 +143,10 @@ jobs:
           key: maven-site-deploy-${{ hashFiles('**/pom.xml') }}
           restore-keys: maven-site-deploy-
 
-      - uses: actions/setup-java@v1.4.3
+      - uses: actions/setup-java@v2.0.0
         with:
           java-version: 8
+          distribution: 'adopt'
 
       - uses: s4u/maven-settings-action@v2.3.0
         with:
