--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,8 @@ name: Build
 
 on:
   push:
-    branches-ignore:
-      - 'dependabot/**'
+    branches:
+      - 'master'
     tags:
       - 'v*'
 
@@ -31,7 +31,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/cache@v2.1.3
+      - uses: actions/cache@v2.1.4
         with:
           path: |
             ~/.m2/repository
@@ -44,11 +44,14 @@ jobs:
           java-version: ${{ matrix.java }}
           distribution: 'adopt'
 
-      - uses: s4u/maven-settings-action@v2.3.0
+      - uses: s4u/maven-settings-action@v2.4.0
         with:
           sonatypeSnapshots: true
 
-      - run: mvn verify
+      - run: mvn --errors --show-version verify
+        env:
+          SIGN_KEY: ${{ secrets.SIGN_KEY }}
+
 
       - run: mvn --errors --show-version sonar:sonar -Dsonar.branch.name=${GITHUB_REF#refs/heads/}
         if: >
@@ -71,7 +74,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - uses: actions/cache@v2.1.3
+      - uses: actions/cache@v2.1.4
         with:
           path: ~/.m2/repository
           key: maven-site-test-${{ hashFiles('**/pom.xml') }}
@@ -82,11 +85,11 @@ jobs:
           java-version: 8
           distribution: 'adopt'
 
-      - uses: s4u/maven-settings-action@v2.2.0
+      - uses: s4u/maven-settings-action@v2.4.0
         with:
           sonatypeSnapshots: true
 
-      - run: mvn --errors --show-version --no-transfer-progress site
+      - run: mvn --errors --show-version site§
 
   deploy:
     name: Build Deploy ubuntu-latest jdk8
@@ -94,7 +97,7 @@ jobs:
       github.repository_owner == 's4u'
       && (
         startsWith(github.ref, 'refs/tags/')
-        || ( github.ref == 'refs/heads/master' && !startsWith(github.event.head_commit.message , '[maven-release-plugin] prepare release') )
+        || !startsWith(github.event.head_commit.message , '[maven-release-plugin] prepare release')
       )
 
     needs: [ verify, site-test ]
@@ -104,7 +107,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - uses: actions/cache@v2.1.3
+      - uses: actions/cache@v2.1.4
         with:
           path: ~/.m2/repository
           key: deploy-ubuntu-latest-jdk8-${{ hashFiles('**/pom.xml') }}
@@ -115,7 +118,7 @@ jobs:
           java-version: 8
           distribution: 'adopt'
 
-      - uses: s4u/maven-settings-action@v2.3.0
+      - uses: s4u/maven-settings-action@v2.4.0
         with:
           sonatypeSnapshots: true
           servers: '[{"id": "ossrh", "username": "${env.OSS_USER}", "password": "${env.OSS_PASS}"}]'
@@ -137,7 +140,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - uses: actions/cache@v2.1.3
+      - uses: actions/cache@v2.1.4
         with:
           path: ~/.m2/repository
           key: maven-site-deploy-${{ hashFiles('**/pom.xml') }}
@@ -148,7 +151,7 @@ jobs:
           java-version: 8
           distribution: 'adopt'
 
-      - uses: s4u/maven-settings-action@v2.3.0
+      - uses: s4u/maven-settings-action@v2.4.0
         with:
           sonatypeSnapshots: true
           properties: |
@@ -163,4 +166,23 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Action"
 
-      - run: mvn --errors --show-version --no-transfer-progress site-deploy
+      - run: mvn --errors --show-version site-deploy
+
+  publish-release:
+    name: Publish Release
+    if: github.repository_owner == 's4u' && startsWith(github.ref, 'refs/tags/')
+
+    needs: site-deploy
+    runs-on: ubuntu-latest
+
+    steps:
+      - id: tag
+        run: echo "::set-output name=name::${GITHUB_REF#refs/tags/}"
+
+      - uses: release-drafter/release-drafter@v5.15.0
+        with:
+          publish: true
+          name: ${{ steps.tag.outputs.name }}
+          tag: ${{ steps.tag.outputs.name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
