test new java-setup-action

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <properties>
         <github.repo>testing</github.repo>
         <project.build.outputTimestamp>2020-12-27T14:56:03Z</project.build.outputTimestamp>
+        <oss.auto.release>false</oss.auto.release>
     </properties>
 
 
