--- a/.github/workflows/env-info.yml
+++ b/.github/workflows/env-info.yml
@@ -6,8 +6,8 @@ on:
   issues:
     types: [opened]
 
-  schedule:
-    - cron: '55 5 * * *'
+#  schedule:
+#    - cron: '55 5 * * *'
 
 jobs:
   env-info:
