--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,11 +2,8 @@ name: Release Drafter
 
 on:
   push:
-    # branches to consider in the event; optional, defaults to all
     branches:
       - 'master'
-    tags:
-      - 'v*'
 
 jobs:
   update_release_draft:
@@ -14,19 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     if: >
       github.repository_owner == 's4u'
-      && (startsWith(github.ref, 'refs/tags/') || !startsWith(github.event.head_commit.message , '[maven-release-plugin]'))
+      && !startsWith(github.event.head_commit.message , '[maven-release-plugin]')
 
     steps:
-      - id: is-tag
-        run: |
-          echo "::set-output name=name::${GITHUB_REF#refs/tags/}"
-          echo "::set-output name=tag::true"
-        if: github.repository_owner == 's4u' && startsWith(github.ref, 'refs/tags/')
-
-      - uses: release-drafter/release-drafter@v5.13.0
-        with:
-          publish: ${{ steps.is-tag.outputs.tag }}
-          name: ${{ steps.is-tag.outputs.name }}
-          tag: ${{ steps.is-tag.outputs.name }}
+      - uses: release-drafter/release-drafter@v5.15.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
