--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/setup-java@v2.0.0
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'adopt'
+          distribution: adopt
 
       - uses: s4u/maven-settings-action@v2.4.0
         with:
@@ -82,7 +82,7 @@ jobs:
       - uses: actions/setup-java@v2.0.0
         with:
           java-version: 8
-          distribution: 'adopt'
+          distribution: adopt
 
       - uses: s4u/maven-settings-action@v2.4.0
         with:
@@ -115,7 +115,7 @@ jobs:
       - uses: actions/setup-java@v2.0.0
         with:
           java-version: 8
-          distribution: 'adopt'
+          distribution: adopt
 
       - uses: s4u/maven-settings-action@v2.4.0
         with:
@@ -148,7 +148,7 @@ jobs:
       - uses: actions/setup-java@v2.0.0
         with:
           java-version: 8
-          distribution: 'adopt'
+          distribution: adopt
 
       - uses: s4u/maven-settings-action@v2.4.0
         with:
