--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,27 @@ on:
 
 jobs:
 
-  verify:
-    name: Build ${{ matrix.os }} jdk${{ matrix.java }}
+  setup:
+    name: Setup build
+    runs-on: ubuntu-latest
+
     if: |
       startsWith(github.ref, 'refs/tags/')
       || !startsWith(github.event.head_commit.message , '[maven-release-plugin] prepare release')
+
+    outputs:
+      branch: ${{ steps.setup.outputs.branch }}
+      date-ym: ${{ steps.setup.outputs.date-ym }}
+
+    steps:
+      - id: setup
+        run: |
+          echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+          echo "::set-output name=date-ym::$(date +%y%m)"
+
+  verify:
+    name: Build ${{ matrix.os }} jdk${{ matrix.java }}
+    needs: setup
 
     runs-on: ${{ matrix.os }}
 
@@ -36,8 +52,8 @@ jobs:
           path: |
             ~/.m2/repository
             ~/.sonar/cache
-          key: ${{ matrix.os }}-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ matrix.os }}-jdk${{ matrix.java }}-
+          key: ${{ needs.setup.outputs.date-ym}}-${{ matrix.os }}-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ needs.setup.outputs.date-ym}}-${{ matrix.os }}-jdk${{ matrix.java }}-
 
       - uses: actions/setup-java@v2.0.0
         with:
@@ -47,26 +63,28 @@ jobs:
       - uses: s4u/maven-settings-action@v2.4.0
         with:
           sonatypeSnapshots: true
-          properties: '[{"sonar.login": "2de0e32b2b3108965f76a4713ba2028978c233ed"}]'
+          properties: |
+            [
+              {"sonar.login": "2de0e32b2b3108965f76a4713ba2028978c233ed"},
+              {"sonar.branch.name": "${{ needs.setup.outputs.branch }}"}
+            ]
 
       - name: sonar setup
         id: sonar
-        run: echo "::set-output name=mvnargs::sonar:sonar -P coverage -Dsonar.branch.name=${GITHUB_REF#refs/heads/}"
+        run: echo "::set-output name=mvn-args::sonar:sonar -P coverage"
         if: >
           matrix.os == 'ubuntu-latest'
           && matrix.java == '11'
           && github.repository_owner == 's4u'
           && startsWith( github.ref, 'refs/heads/')
 
-      - run: mvn --errors --show-version verify ${{steps.sonar.outputs.mvnargs}}
+      - run: mvn --errors --show-version verify ${{steps.sonar.outputs.mvn-args}}
         env:
           SIGN_KEY: ${{ secrets.SIGN_KEY }}
 
   site-test:
     name: Maven Site - Test
-    if: |
-      startsWith(github.ref, 'refs/tags/')
-      || !startsWith(github.event.head_commit.message , '[maven-release-plugin] prepare release')
+    needs: setup
 
     runs-on: ubuntu-latest
 
@@ -76,8 +94,8 @@ jobs:
       - uses: actions/cache@v2.1.5
         with:
           path: ~/.m2/repository
-          key: maven-site-test-${{ hashFiles('**/pom.xml') }}
-          restore-keys: maven-site-test-
+          key: ${{ needs.setup.outputs.date-ym}}-maven-site-test-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ needs.setup.outputs.date-ym}}-maven-site-test-
 
       - uses: actions/setup-java@v2.0.0
         with:
@@ -94,12 +112,7 @@ jobs:
     name: Build Deploy ubuntu-latest jdk8
     concurrency: maven-deploy
 
-    if: >
-      github.repository_owner == 's4u'
-      && (
-        startsWith(github.ref, 'refs/tags/')
-        || !startsWith(github.event.head_commit.message , '[maven-release-plugin] prepare release')
-      )
+    if: github.repository_owner == 's4u'
 
     needs: [ verify, site-test ]
 
@@ -111,8 +124,8 @@ jobs:
       - uses: actions/cache@v2.1.5
         with:
           path: ~/.m2/repository
-          key: deploy-ubuntu-latest-jdk8-${{ hashFiles('**/pom.xml') }}
-          restore-keys: deploy-ubuntu-latest-jdk8-
+          key: ${{ needs.setup.outputs.date-ym}}-deploy-ubuntu-latest-jdk8-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ needs.setup.outputs.date-ym}}-deploy-ubuntu-latest-jdk8-
 
       - uses: actions/setup-java@v2.0.0
         with:
@@ -145,8 +158,8 @@ jobs:
       - uses: actions/cache@v2.1.5
         with:
           path: ~/.m2/repository
-          key: maven-site-deploy-${{ hashFiles('**/pom.xml') }}
-          restore-keys: maven-site-deploy-
+          key: ${{ needs.setup.outputs.date-ym}}-maven-site-deploy-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ needs.setup.outputs.date-ym}}-maven-site-deploy-
 
       - uses: actions/setup-java@v2.0.0
         with:
