--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,9 @@
 
     <groupId>org.simplify4u.test</groupId>
     <artifactId>test</artifactId>
-    <packaging>pom</packaging>
-
     <version>1.0.4-SNAPSHOT</version>
-    <url>https://www.simplify4u.org/${github.repo}</url>
 
+    <url>https://www.simplify4u.org/${github.repo}</url>
     <scm>
         <connection>scm:git:git@github.com:s4u/testing</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
@@ -49,7 +47,16 @@
         <github.repo>testing</github.repo>
         <project.build.outputTimestamp>2020-12-27T14:56:03Z</project.build.outputTimestamp>
         <oss.auto.release>false</oss.auto.release>
+        <maven-release-plugin.version>3.0.0-M4</maven-release-plugin.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.7.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
