--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,14 @@
 
     <groupId>org.simplify4u.test</groupId>
     <artifactId>test</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
 
     <url>https://www.simplify4u.org/${github.repo}</url>
     <scm>
         <connection>scm:git:git@github.com:s4u/testing</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/s4u/testing</url>
-        <tag>v1.0.4</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
@@ -44,7 +44,7 @@
 
     <properties>
         <github.repo>testing</github.repo>
-        <project.build.outputTimestamp>2021-04-24T06:55:27Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2021-04-24T06:55:34Z</project.build.outputTimestamp>
         <oss.auto.release>false</oss.auto.release>
         <maven-release-plugin.version>3.0.0-M4</maven-release-plugin.version>
     </properties>
