--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,8 +124,8 @@ jobs:
       - uses: actions/cache@v2.1.5
         with:
           path: ~/.m2/repository
-          key: ${{ needs.setup.outputs.date-ym}}-deploy-ubuntu-latest-jdk8-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ needs.setup.outputs.date-ym}}-deploy-ubuntu-latest-jdk8-
+          key: ${{ needs.setup.outputs.date-ym}}-ubuntu-latest-jdk8-deploy-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ needs.setup.outputs.date-ym}}-ubuntu-latest-jdk8-
 
       - uses: actions/setup-java@v2.0.0
         with:
@@ -159,7 +159,7 @@ jobs:
         with:
           path: ~/.m2/repository
           key: ${{ needs.setup.outputs.date-ym}}-maven-site-deploy-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ needs.setup.outputs.date-ym}}-maven-site-deploy-
+          restore-keys: ${{ needs.setup.outputs.date-ym}}-maven-site-
 
       - uses: actions/setup-java@v2.0.0
         with:
