--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,7 +114,7 @@ jobs:
 
     if: github.repository_owner == 's4u'
 
-    needs: [ verify, site-test ]
+    needs: [ setup, verify, site-test ]
 
     runs-on: ubuntu-latest
 
@@ -148,7 +148,7 @@ jobs:
     concurrency: site-deploy
     if: github.repository_owner == 's4u' && startsWith(github.ref, 'refs/tags/')
 
-    needs: deploy
+    needs: [ setup, deploy ]
 
     runs-on: ubuntu-latest
 
