--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,10 +55,9 @@ jobs:
           key: ${{ needs.setup.outputs.date-ym}}-${{ matrix.os }}-jdk${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ needs.setup.outputs.date-ym}}-${{ matrix.os }}-jdk${{ matrix.java }}-
 
-      - uses: actions/setup-java@v2.3.0
+      - uses: ./.github/actions/setup-maven
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'adopt'
 
       - uses: s4u/maven-settings-action@v2.4.1
         with:
@@ -97,10 +96,9 @@ jobs:
           key: ${{ needs.setup.outputs.date-ym}}-maven-site-test-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ needs.setup.outputs.date-ym}}-maven-site-test-
 
-      - uses: actions/setup-java@v2.3.0
+      - uses: ./.github/actions/setup-maven
         with:
           java-version: 8
-          distribution: 'adopt'
 
       - uses: s4u/maven-settings-action@v2.4.1
         with:
@@ -127,10 +125,9 @@ jobs:
           key: ${{ needs.setup.outputs.date-ym}}-ubuntu-latest-jdk8-deploy-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ needs.setup.outputs.date-ym}}-ubuntu-latest-jdk8-
 
-      - uses: actions/setup-java@v2.3.0
+      - uses: ./.github/actions/setup-maven
         with:
           java-version: 8
-          distribution: 'adopt'
 
       - uses: s4u/maven-settings-action@v2.4.1
         with:
@@ -161,10 +158,9 @@ jobs:
           key: ${{ needs.setup.outputs.date-ym}}-maven-site-deploy-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ needs.setup.outputs.date-ym}}-maven-site-
 
-      - uses: actions/setup-java@v2.3.0
+      - uses: ./.github/actions/setup-maven
         with:
           java-version: 8
-          distribution: 'adopt'
 
       - uses: s4u/maven-settings-action@v2.4.1
         with:
