--- a/.github/actions/setup-maven/action.yml
+++ b/.github/actions/setup-maven/action.yml
@@ -1,5 +1,5 @@
-name: 'Setup Maven'
-description: 'Setup maven and tools for build'
+name: 'Setup Maven with settings.xml'
+description: 'Setup environment for Maven build'
 
 inputs:
 
@@ -14,7 +14,13 @@ inputs:
     default: 'temurin'
     required: false
 
-  # maven settings.xml params
+  # maven version
+  maven-version:
+    description: 'maven wrapper with specific version'
+    default: 3.8.1
+    required: false
+
+  # maven settings.xml
   settings-servers:
     description: 'servers definition in json array, eg: [{"id": "serverId", "username": "username", "password": "password"}]'
     required: false
@@ -31,11 +37,6 @@ inputs:
     description: 'add https://oss.sonatype.org/content/repositories/snapshots to repository list - true or false'
     required: false
 
-  maven-version:
-    description: 'maven wrapper with specific version'
-    default: 3.8.1
-    required: false
-
 runs:
   using: 'composite'
 
@@ -45,8 +46,17 @@ runs:
       shell: bash
     - uses: actions/setup-java@v2.3.0
       with:
+        overwrite-settings: false
         java-version: '${{ inputs.java-version }}'
         distribution: '${{ inputs.java-distribution }}'
+    - run: echo "::endgroup::"
+      shell: bash
+
+    - run: echo "::group::Setup Maven Version"
+      shell: bash
+    - uses: stCarolas/setup-maven@v4.1
+      with:
+        maven-version: '${{ inputs.maven-version }}'
     - run: echo "::endgroup::"
       shell: bash
 
@@ -61,11 +71,4 @@ runs:
     - run: echo "::endgroup::"
       shell: bash
 
-    - run: echo "::group::Setup Maven Wrapper"
-      shell: bash
-    - run: |
-        [ "${{ inputs.maven-version }}" != "skip" ] && mvn -V -N io.takari:maven:wrapper -Dmaven=${{ inputs.maven-version }}
-      shell: bash
-    - run: echo "::endgroup::"
-      shell: bash
 
