maven matrix test fix out

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,14 @@ jobs:
     outputs:
       branch: ${{ steps.setup.outputs.branch }}
       date-ym: ${{ steps.setup.outputs.date-ym }}
-      maven-matrix: ${{ steps.setup.outputs.date-ym }}
+      maven-matrix: ${{ steps.setup.outputs.maven-matrix }}
 
     steps:
       - uses: actions/checkout@v2.3.4
 
       - name: Read preoject environemnts
         run: |
-          [ -f .github/build.env ] && cat .github/build.env >> $GITHUB_ENV
+          if [ -f .github/build.env ]; then cat .github/build.env >> $GITHUB_ENV; fi
 
       - name: Set outputs
         id: setup
